css/eve-online-fitting-manager.css
@media all {
	.bootstrap-post-loop-fittings {
		list-style-type: none;
		padding-left: 0;
	}

	.single-fitting .content-wrapper {
		padding-top: 8px;
		padding-top: 0.5rem;
	}

	.doctrine-shipfitting-header span {
		display: inline-block;
		vertical-align: middle;
	}

	.doctrine-shipfitting-header-wrapper {
		width: 100%;
	}

	.doctrine-shipfitting-header-ship-image img {
		width: 48px;
		width: 3rem;
	}

	.ship-fitting-description {
		margin-bottom: 48px;
		margin-bottom: 3rem;
	}

	.ship-fitting-visualization, .fitting-view-osmium-loadout {
		margin-bottom: 24px;
		margin-bottom: 1.5rem;
	}

	.fitting-list-item {
		color: inherit;
	}

	.fitting-used-in-doctrines {
		list-style: none;
	}

	.sidebar-wrapper .sidebar-doctrine-list {
		padding-left: 0;
	}

	.fitting-used-in-doctrines {
		padding-left: 16px;
		padding-left: 1rem;
	}

	.bootstrap-post-loop-fittings li article {
		margin-bottom: 0;
	}

	.doctrine-shipfitting-header {
		font-size: 18px;
		font-size: 1.125rem;
	}

	/* Doctrine List Content Shortcode
	--------------------------------------------------------------------------*/
	.content-doctrine-list div.doctrine {
		padding-top: 10px;
		padding-bottom: 10px;
	}

	.content-doctrine-list header.entry-header,
	.content-doctrine-list header.entry-header h2 {
		margin-bottom: 0;
	}

	.content-doctrine-list h2.entry-title {
		font-size: 18px;
		font-size: 1.125rem;
	}

	.content-doctrine-list .child-doctrine-list {
		padding-left: 25px;
		padding-left: 1.5625rem;
	}

	div.doctrine.has-children {
		position: relative;
	}

	.child-doctrine-second-level {
		font-size: 14px;
		font-size: 0.875rem;
	}

	div.doctrine.has-children .child-doctrine-list {
		display: none;
	}

	div.doctrine.has-children.open .child-doctrine-list {
		display: block;
	}

	div.child-doctrine-second-level {
		display: block;
		padding-left: 25px;
		padding-left: 1.5625rem;
	}

	/* Doctrine List Sidebar
	--------------------------------------------------------------------------*/
	.fitting-sidebar-search {
		padding: 10px 0;
	}

	.sidebar-doctrine-list, .child-doctrine-list {
		list-style: none;
	}

	.sidebar-doctrine-list, .child-doctrine-list.child-doctrine-second-level {
/*		display: block;
		padding-left: 25px;
		padding-left: 1.5625rem;*/
	}

	.sidebar-doctrine-list > li > .child-doctrine-list {
		font-size: 16px;
		font-size: 1rem;
	}

	li.doctrine {
		position: relative;
		display: block;
		padding: 10px 15px;
	}

	.doctrine.has-children .caret {
		position: absolute;
		right: 0;
		top: 0;
		z-index: 1;
		cursor: pointer;
		background-color: rgba(0,0,0,0.05);
		border-bottom: 1px solid #999;
		display: block;
		height: 40px;
		width: 40px;
		border: 0;
	}

	.doctrine.has-children .caret i {
		display: block;
		width: .625rem;
		height: .625rem;
		-webkit-transform: translate(-50%,-50%) rotate(45deg);
		-moz-transform: translate(-50%,-50%) rotate(45deg);
		-ms-transform: translate(-50%,-50%) rotate(45deg);
		transform: translate(-50%,-50%) rotate(45deg);
		border: 2px solid currentColor;
		border-width: 0 2px 2px 0;
		transition: all .2s;
		position: absolute;
		top: 50%;
		left: 50%;
	}

	.sidebar-doctrine-list .dropdown-menu {
		position: initial;
		float: none;
		box-shadow: none;
		background-color: transparent;
		border: none;
		padding-left: 0;
	}

	.sidebar-doctrine-list .dropdown-menu.child-doctrine-second-level {
		display: block;
		padding-left: 25px;
		padding-left: 1.5625rem;
	}

	.sidebar-doctrine-list .dropdown-menu > li > a:hover, .sidebar-doctrine-list .dropdown-menu > li > a:focus {
		background-color: transparent;
	}

	.sidebar-doctrine-list .doctrine-current > .doctrine-link-item,
	.sidebar-doctrine-list .doctrine-active > .doctrine-link-item {
		color: #23527c;
	}

	.doctrine-link-item, .dropdown-menu .doctrine-link-item {
		position: relative;
		display: block;
		color: inherit;
	}

	.dropdown-menu .doctrine-link-item:hover {
		color: #23527c;
		text-decoration: underline;
	}

	.child-doctrine-list .doctrine {
		padding: 0;
	}

	.sidebar-doctrine-list > li {
		padding-left: 0;
	}

	/* Fitting Ring
	--------------------------------------------------------------------------*/
	.fittingPanel {
		position: relative;
		height: 398px;
		width: 398px;
		z-index: 3;
		margin: 0 auto;
		margin-bottom: 24px;
		margin-bottom: 1.5rem;
	}

	.fittingRing {
		position: absolute;
		left: 0px;
		top: 0 px;
		width: 398px;
		height: 398px;
		z-index: -1;
	}

	.fittingRingImage {
		position: absolute;
		left: 0px;
		top: 0px;
		height: 398px;
		width: 398px;
		border: 0px
	}

	.highSlots {
		position: absolute;
		left: 0px;
		top: 0px;
		width: 398px;
		height: 398px;
		z-index: -1;
	}

	.highSlot_1 {
		position: absolute;
		left: 73px;
		top: 60px;
		width: 32px;
		height: 32px;
	}

	.highSlot_2 {
		position: absolute;
		left: 102px;
		top: 42px;
		width: 32px;
		height: 32px;
	}

	.highSlot_3 {
		position: absolute;
		left: 134px;
		top: 27px;
		width: 32px;
		height: 32px;
	}

	.highSlot_4 {
		position: absolute;
		left: 169px;
		top: 21px;
		width: 32px;
		height: 32px;
	}

	.highSlot_5 {
		position: absolute;
		left: 203px;
		top: 22px;
		width: 32px;
		height: 32px;
	}

	.highSlot_6 {
		position: absolute;
		left: 238px;
		top: 30px;
		width: 32px;
		height: 32px;
	}

	.highSlot_7 {
		position: absolute;
		left: 270px;
		top: 45px;
		width: 32px;
		height: 32px;
	}

	.highSlot_8 {
		position: absolute;
		left: 295px;
		top: 64px;
		width: 32px;
		height: 32px;
	}

	.midSlots {
		position: absolute;
		left: 0px;
		top: 0px;
		width: 398px;
		height: 398px;
		z-index: -1;
	}

	.midSlot_1 {
		position: absolute;
		left: 26px;
		top: 140px;
		width: 32px;
		height: 32px;
	}

	.midSlot_2 {
		position: absolute;
		left: 24px;
		top: 176px;
		width: 32px;
		height: 32px;
	}

	.midSlot_3 {
		position: absolute;
		left: 23px;
		top: 212px;
		width: 32px;
		height: 32px;
	}

	.midSlot_4 {
		position: absolute;
		left: 30px;
		top: 245px;
		width: 32px;
		height: 32px;
	}

	.midSlot_5 {
		position: absolute;
		left: 46px;
		top: 278px;
		width: 32px;
		height: 32px;
	}

	.midSlot_6 {
		position: absolute;
		left: 69px;
		top: 304px;
		width: 32px;
		height: 32px;
	}

	.midSlot_7 {
		position: absolute;
		left: 100px;
		top: 328px;
		width: 32px;
		height: 32px;
	}

	.midSlot_8 {
		position: absolute;
		left: 133px;
		top: 342px;
		width: 32px;
		height: 32px;
	}

	.lowSlots {
		position: absolute;
		left: 0px;
		top: 0px;
		width: 398px;
		height: 398px;
		z-index: -1;
	}

	.lowSlot_1 {
		position: absolute;
		left: 344px;
		top: 143px;
		width: 32px;
		height: 32px;
	}

	.lowSlot_2 {
		position: absolute;
		left: 350px;
		top: 178px;
		width: 32px;
		height: 32px;
	}

	.lowSlot_3 {
		position: absolute;
		left: 349px;
		top: 213px;
		width: 32px;
		height: 32px;
	}

	.lowSlot_4 {
		position: absolute;
		left: 340px;
		top: 246px;
		width: 32px;
		height: 32px;
	}

	.lowSlot_5 {
		position: absolute;
		left: 323px;
		top: 277px;
		width: 32px;
		height: 32px;
	}

	.lowSlot_6 {
		position: absolute;
		left: 300px;
		top: 304px;
		width: 32px;
		height: 32px;
	}

	.lowSlot_7 {
		position: absolute;
		left: 268px;
		top: 324px;
		width: 32px;
		height: 32px;
	}

	.lowSlot_8 {
		position: absolute;
		left: 234px;
		top: 338px;
		width: 32px;
		height: 32px;
	}

	.rigSlots {
		position: absolute;
		left: 0px;
		top: 0px;
		width: 398px;
		height: 398px;
		z-index: -1;
	}

	.rigSlot_1 {
		position: absolute;
		left: 148px;
		top: 259px;
		width: 32px;
		height: 32px;
	}

	.rigSlot_2 {
		position: absolute;
		left: 184px;
		top: 267px;
		width: 32px;
		height: 32px;
	}

	.rigSlot_3 {
		position: absolute;
		left: 221px;
		top: 259px;
		width: 32px;
		height: 32px;
	}

	.subSystems {
		position: absolute;
		left: 0px;
		top: 0px;
		width: 398px;
		height: 398px;
		z-index: -1;
	}

	.subSystem_1 {
		position: absolute;
		left: 118px;
		top: 132px;
		width: 32px;
		height: 32px;
	}

	.subSystem_2 {
		position: absolute;
		left: 148px;
		top: 107px;
		width: 32px;
		height: 32px;
	}

	.subSystem_3 {
		position: absolute;
		left: 183px;
		top: 99px;
		width: 32px;
		height: 32px;
	}

	.subSystem_4 {
		position: absolute;
		left: 220px;
		top: 107px;
		width: 32px;
		height: 32px;
	}

	.subSystem_5 {
		position: absolute;
		left: 250px;
		top: 132px;
		width: 32px;
		height: 32px;
	}

	.shipImage {
		position: absolute;
		left: 72px;
		top: 71px;
		width: 256px;
		height: 256px;
		z-index: -2;
	}
}

@media screen and (min-width: 1200px) {
	.ship-fitting-description {
		margin-bottom: 80px;
		margin-bottom: 5rem;
	}

	.ship-fitting-visualization {
		margin-top: 55px;
	}
}

